Few fixes to styling and not showing up job history.

--- a/hungryhippos-tester-web/src/main/resources/static/login.css
+++ b/hungryhippos-tester-web/src/main/resources/static/login.css
@@ -112,3 +112,11 @@ font-weight: bold;color: green;
 .floatLeft{
 	float: left;
 }
+
+.smallWidthTextBox{
+	width: 102px;
+}
+
+.mediumWidthTextBox{
+	width: 500px;
+}
